[package]
name = "egui-dropdown"
description = "An actual dropdown list for egui"
version = "0.13.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-dropdown"
authors = ["ItsEthra"]
readme = "README.md"
exclude = ["/examples", "/media"]

[features]
unidecode = ["dep:unidecode"]

[dependencies]
egui = { version = "0.31", default-features = false }
unidecode = { version = "0.3.0", optional = true }

[dev-dependencies]
eframe = "0.31"
