[package]
name = "egui-dropdown"
description = "An actual dropdown list for egui"
version = "0.14.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ItsEthra/egui-dropdown"
authors = ["ItsEthra"]
readme = "README.md"
exclude = ["/examples", "/media"]

[dependencies]
egui = { version = "0.33.2", default-features = false }

[dev-dependencies]
eframe = "0.33.2"
